Nov 16, 2005

  * Avoid XPCE http servers to be garbage collected.

Oct 17, 2005

  * ADDED: Pass peer from threaded HTTP server to request.

  * ENHANCED: Use UTF-8 encoding for text by default.

Sep 28, 2005

  * FIXED: Regular expressions in xpce_httpd frontend.  Wouter Jansweijer.

Sep 23, 2005

  * ADDED: .class to mimetypes.pl.

Sep 7, 2005

  * FIXED: handle connection error in http_get/3 gracefully.

Sep 6, 2005

  * FIXED: handle error in tcp_accept/3 gracefully.

Sep 5, 2005

  * ADDED: method(head) --> "HEAD".  Matt Lilley.

Apr 26, 2005

  * ADDED: debug(sgml_plugin) and some missing use_module calls.  Simplifies
    debugging automatic conversion.

Mar 4, 2005

  * FIXED: Bug#24: open files binary.   Fabien Todescato.

Feb 11, 2005

  * FIXED: empy header field eats next line as value.  Chris Ritchey.

Jan 4, 2005

  * FIXED: Bug#2: Disconnect from POST replies.

Sep 23, 2004

  * FIXED: Ignore minor types when deciding which plugin to use for the
    SGML plugin.

Aug 30, 2004

  * FIXED: Bug#179: Avoid XPCE dependency on strip_module/3.  Sandro Hawke.

Aug 16, 2004

  * FIXED: Remove " from boundary=... HTTP-POST requests.  Appears necessary
    for posting to Tomcat servers.  Also added explicit MIME-Version: 1.0
    to the header.

Aug 12, 2004

  * ADDED: form_data(+List) alternative to http_post/4.

  * ADDED: option reply_header(-Header) to get the full replied header for
    GET and POST methods.  Also added decoding of the SetCookie field.

Aug 5, 2004

  * ADDED: request_header(Name=Value) to http_open/3

Aug 3, 2004

  * ADDED: keep_alive_timeout(Seconds) for multi-threaded server.

  * FIXED: remove choicepoints in http_open/3

Jul 31, 2004

  * ADDED: http_current_worker/2

Jul 30, 2004

  * ADDED: Allow explicit head and body in page//1 and page//2

Jul 21, 2004

  * FIXED: Bug#166: Allow alternative responses (Sandro Hawke).

  * FIXED: Bug#168: Close connection on timeout (Sandro Hawke).
